# sidecar

./: .gitignore  Cargo.toml  Dockerfile.plekko  Dockerfile.sidecar  Makefile  README.md  buf.gen.yaml  fly.toml  release.sh
.github/workflows/: ci.yaml  docker.yaml  integration.yaml
lekkod/: Cargo.toml
lekkod/src/: main.rs
plekko/: Cargo.toml
plekko/src/: .main.rs.swp  main.rs
sidecar/: .#Cargo.toml  Cargo.toml  build.rs
sidecar/src/: config_service.rs  distro_service.rs  lib.rs  logging.rs  main.rs  metrics.rs  repofs.rs  service.rs  store.rs  types.rs
sidecar/src/evaluate/: evaluator.rs  functions.rs  mod.rs  rules.rs  rules_v3.rs
src/: bootstrap.rs  fallback.rs  lib.rs  logging.rs  main.rs  metrics.rs  repofs.rs  service.rs  state.rs  store.rs  types.rs
src/evaluate/: evaluator.rs  functions.rs  mod.rs  rules.rs  rules_v3.rs
src/service/: mod.rs
src/store/: mod.rs
templates/: buf.gen.cli.yaml  buf.gen.sdk.yaml
