[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4"
itertools = "0.10.5"
hyper = { version="0.14", features=["full"] }
hyper-rustls = { version="0.23", features=["webpki-roots", "http2"] }
prost = { version="0.11", features=["prost-derive"] }
prost-types = "0.11"
tokio = { version="1.0", features=["rt", "rt-multi-thread", "macros"] }
tonic = { version= "0.8", features=["tls", "gzip"]}
