[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4"
futures = "0.3.25"
hyper = { version="0.14", features=["full"] }
hyper-rustls = { version="0.23", features=["webpki-roots", "http2"] }
itertools = "0.10.5"
prost = { version="0.11", features=["prost-derive"] }
prost-types = "0.11"
serde = "1"
serde_json = "1"
tokio = { version="1.0", features=["rt", "rt-multi-thread", "macros", "time", "sync", "signal"] }
tonic = { version= "0.8", features=["tls", "gzip"]}
clap = { version = "4.0.29", features = ["derive"] }
sha1 = "0.10.5"
yaml-rust = "0.4.5"
git-repository = { version = "0.29.0", features = ["max-performance-safe"], default-features = false }
