[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4"
env_logger = "0.10"
futures = "0.3.25"
http = "0.2"
humantime = "2"
hyper = { version="0.14", features=["full"] }
hyper-rustls = { version="0.23", features=["webpki-roots", "http2"] }
itertools = "0.10.5"
prost = { version="0.11", features=["prost-derive"] }
prost-types = "0.11"
serde = "1"
serde_json = "1"
tokio = { version="1.0", features=["rt", "rt-multi-thread", "macros", "time", "sync", "signal"] }
tonic = { version= "0.9", features=["tls", "gzip"]}
tower = "0.4"
tower-http = { version="0.4", features=["trace"] }
tracing = "0.1"
log = "0.4"
clap = { version = "4.0.29", features = ["derive"] }
sha1 = "0.10.5"
yaml-rust = "0.4.5"
gix = { version = "0.46.0", features = ["max-performance-safe"], default-features = false }
notify = { version = "5.1.0", default-features = false, features = ["macos_fsevent"] }
regex = "1.8.1"
lazy_static = "1.4.0"
metrics-exporter-prometheus = "0.12.1"
metrics = "0.21.0"